Fixed the tooltip z-index on the list of members (neighborhood)

--- a/root/stylesheets/jquery.tooltip.css
+++ b/root/stylesheets/jquery.tooltip.css
@@ -3,7 +3,7 @@
 	border:1px solid #111111;
 	padding:5px;
 	position:absolute;
-	z-index:3000;
+	z-index:10000;
 }
 #tooltip h3, #tooltip div {
 	margin:0;
